server/k8s/sandbox-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-networking
spec:
  podSelector: {}
  policyTypes:
    - Egress
    - Ingress
